unpackaged/main/default/objects/Campaign__c/fields/Related_Priority__c.field-meta.xml
<CustomField>
    <fullName>Related_Priority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programs</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>((1 AND 2) AND (3 OR 4)) OR 5</booleanFilter>
        <filterItems>
            <field>Program__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Focus Calendar National Priority</value>
        </filterItems>
        <filterItems>
            <field>Program__c.FocusType__c</field>
            <operation>equals</operation>
            <value>2018 Program</value>
        </filterItems>
        <filterItems>
            <field>Program__c.Country__c</field>
            <operation>equals</operation>
            <valueField>$User.Country</valueField>
        </filterItems>
        <filterItems>
            <field>Program__c.Country__c</field>
            <operation>equals</operation>
            <value>Global</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator, System Administrator with Bulk Hard Delete</value>
        </filterItems>
        <infoMessage>Enter "ALL" in search text and select "All Fields" for the search radio button, then click Go to view all 2018 Programs.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>BI Child Campaigns</relationshipLabel>
    <relationshipName>BICampaigns</relationshipName>
    <type>Lookup</type>
</CustomField>