unpackaged/main/default/objects/Campaign__c/fields/RequestStatus__c.field-meta.xml
<CustomField>
    <fullName>RequestStatus__c</fullName>
    <description>Field used to view the current status of the IO generation.</description>
    <inlineHelpText>Field used to view the current status of the IO generation.</inlineHelpText>
    <label>Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IO Not Requested</fullName>
                <default>true</default>
                <label>IO Not Requested</label>
            </value>
            <value>
                <fullName>IO Pending</fullName>
            </value>
            <value>
                <fullName>IO Processing</fullName>
            </value>
            <value>
                <fullName>IO Created</fullName>
            </value>
            <value>
                <fullName>IO Rejected</fullName>
            </value>
            <value>
                <fullName>WBS Not Requested</fullName>
            </value>
            <value>
                <fullName>WBS Pending</fullName>
            </value>
            <value>
                <fullName>WBS Processing</fullName>
            </value>
            <value>
                <fullName>WBS Created</fullName>
            </value>
            <value>
                <fullName>WBS Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>