unpackaged/main/default/objects/Campaign__c/fields/SAP_Brand_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>SAP_Brand_Abbreviation__c</fullName>
    <formula>Brand_Quality__r.Brand_Abbreviation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Brand Abbreviation</label>
    <type>Text</type>
</CustomField>