unpackaged/main/default/objects/Campaign__c/fields/SAP_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Company_Code__c</fullName>
    <formula>ParentMarketingPlan__r.SAP_Company_Code__c</formula>
    <label>SAP Company Code</label>
    <type>Text</type>
</CustomField>