unpackaged/main/default/objects/Campaign__c/fields/SAP_Controlling_Area__c.field-meta.xml
<CustomField>
    <fullName>SAP_Controlling_Area__c</fullName>
    <formula>ParentMarketingPlan__r.SAP_Controlling_Area__c</formula>
    <label>SAP Controlling Area</label>
    <type>Text</type>
</CustomField>