unpackaged/main/default/objects/Campaign__c/fields/SAP_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>SAP_Cost_Center__c</fullName>
    <formula>ParentMarketingPlan__r.SAP_Cost_Center__c</formula>
    <label>SAP Cost Center</label>
    <type>Text</type>
</CustomField>