unpackaged/main/default/objects/Campaign__c/fields/SAP_Product_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>SAP_Product_Hierarchy__c</fullName>
    <formula>Brand_Quality__r.SAP_Product_Hierarchy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Product Hierarchy</label>
    <type>Text</type>
</CustomField>