unpackaged/main/default/objects/Campaign__c/fields/September_Budget__c.field-meta.xml
<CustomField>
    <fullName>September_Budget__c</fullName>
    <label>September Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>