unpackaged/main/default/objects/Campaign__c/fields/SFPR_Campaign_Spend__c.field-meta.xml
<CustomField>
    <fullName>SFPR_Campaign_Spend__c</fullName>
    <label>Pending Campaign Spend</label>
    <summarizedField>Campaign_Spend__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Campaign_Spend__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>Campaign_Spend__c.ParentCampaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>