unpackaged/main/default/objects/Campaign__c/fields/Spend_Type_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Spend_Type_Marketing__c</fullName>
    <label>Spend Type [Marketing]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Off</fullName>
            </value>
            <value>
                <fullName>Perm. Visibility</fullName>
            </value>
            <value>
                <fullName>BTL 'Equity'</fullName>
            </value>
            <value>
                <fullName>On</fullName>
            </value>
            <value>
                <fullName>S'Ship / Experential</fullName>
            </value>
            <value>
                <fullName>Research Syndicated</fullName>
            </value>
            <value>
                <fullName>POS Storage &amp; Distribution</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>NPD Launch Support</fullName>
            </value>
            <value>
                <fullName>NPD Production &amp; Development</fullName>
            </value>
            <value>
                <fullName>Research Brand</fullName>
            </value>
            <value>
                <fullName>NPD Development</fullName>
            </value>
            <value>
                <fullName>Pendulum</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Syndicated Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>