unpackaged/main/default/objects/Campaign__c/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <label>Strategy(JTBD)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CampaignBrand__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Acquire Lda Millennials</fullName>
            </value>
            <value>
                <fullName>Build Awareness</fullName>
            </value>
            <value>
                <fullName>Build Top Of Mind Awareness</fullName>
            </value>
            <value>
                <fullName>Communicate Authenticity &amp; Quality</fullName>
            </value>
            <value>
                <fullName>Drive 901 Awareness</fullName>
            </value>
            <value>
                <fullName>Drive Awareness (Off)</fullName>
            </value>
            <value>
                <fullName>Drive Brand Advocacy</fullName>
            </value>
            <value>
                <fullName>Drive Consideration &amp; Trial</fullName>
            </value>
            <value>
                <fullName>Drive Sauza Awareness</fullName>
            </value>
            <value>
                <fullName>Drive Successful Innovation</fullName>
            </value>
            <value>
                <fullName>Drive The On-Premise</fullName>
            </value>
            <value>
                <fullName>Drive The On-Premise (Basil Hayden)</fullName>
            </value>
            <value>
                <fullName>Establish Belief In Quality</fullName>
            </value>
            <value>
                <fullName>Expand Distribution (Off)</fullName>
            </value>
            <value>
                <fullName>Get Millennial Males To Consider Jim Beam Again</fullName>
            </value>
            <value>
                <fullName>Grow Distribution On Plata</fullName>
            </value>
            <value>
                <fullName>Grow Pinnacle Original</fullName>
            </value>
            <value>
                <fullName>Grow Wine And Vodka</fullName>
            </value>
            <value>
                <fullName>Implement Join The Club</fullName>
            </value>
            <value>
                <fullName>Increase Awareness And Relevance</fullName>
            </value>
            <value>
                <fullName>Interrupt Bacardi</fullName>
            </value>
            <value>
                <fullName>Make 901 Accessible</fullName>
            </value>
            <value>
                <fullName>Make Pinnacle Available</fullName>
            </value>
            <value>
                <fullName>One More Drink Per Month</fullName>
            </value>
            <value>
                <fullName>Premiumize And Trade Up</fullName>
            </value>
            <value>
                <fullName>Recruit Consumers</fullName>
            </value>
            <value>
                <fullName>Recruit Consumers From Outside Beam/Bourbon Category</fullName>
            </value>
            <value>
                <fullName>Recruit New Consumers</fullName>
            </value>
            <value>
                <fullName>Recruit “Whiskey Women”</fullName>
            </value>
            <value>
                <fullName>Reestablish Sauza Brand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>