unpackaged/main/default/objects/Campaign__c/fields/Territory_Aus__c.field-meta.xml
<CustomField>
    <fullName>Territory_Aus__c</fullName>
    <description>This Territory field created for to track Australia Campaigns</description>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AUCHENTOSHAN FBS RETAILER WHISKEY PROGRAM BTL FBS/BTL/OFF PREMISE</fullName>
            </value>
            <value>
                <fullName>BASIL HAYDEN FBS RETAILER WHISKEY PROGRAM BTL FBS/BTL/OFF PREMISE</fullName>
            </value>
            <value>
                <fullName>BOWMORE FBS RETAILER WHISKEY PROGRAM BTL FBS/BTL/OFF PREMISE</fullName>
            </value>
            <value>
                <fullName>CANADIAN CLUB FBS CC SUMMER / TENNIS BTL ON PREMISE</fullName>
            </value>
            <value>
                <fullName>CANADIAN CLUB FBS CC WINTER/BAD SWEATER BTL ON PREMISE</fullName>
            </value>
            <value>
                <fullName>CANADIAN CLUB FBS FIRST POUR SUPPORT BTL ON PREMISE</fullName>
            </value>
            <value>
                <fullName>CANADIAN CLUB FBS RETAILER WHISKEY PROGRAM BTL FBS/BTL/OFF PREMISE</fullName>
            </value>
            <value>
                <fullName>CANADIAN CLUB FBS THE EXCHANGE BTL ON PREMISE</fullName>
            </value>
            <value>
                <fullName>CANADIAN CLUB FBS THE PERFECT SERVE BTL ON PREMISE</fullName>
            </value>
            <value>
                <fullName>CANADIAN CLUB FBS VISIBILITY ATL FBS/ATL</fullName>
            </value>
            <value>
                <fullName>CANADIAN CLUB RTD AGENCY FEES ATL RTD/ATL</fullName>
            </value>
            <value>
                <fullName>CANADIAN CLUB RTD CC SPONSORSHIPS/TRIAL ATL RTD/ATL</fullName>
            </value>
            <value>
                <fullName>CANADIAN CLUB RTD CC SUMMER / TENNIS ATL RTD/ATL</fullName>
            </value>
            <value>
                <fullName>CANADIAN CLUB RTD CC SUMMER / TENNIS BTL RTD/BTL/OFF PREMISE</fullName>
            </value>
            <value>
                <fullName>CANADIAN CLUB RTD CC WINTER/BAD SWEATER ATL RTD/ATL</fullName>
            </value>
            <value>
                <fullName>CANADIAN CLUB RTD CC WINTER/BAD SWEATER BTL RTD/BTL/OFF PREMISE</fullName>
            </value>
            <value>
                <fullName>CANADIAN CLUB RTD MEDIA ATL RTD/ATL</fullName>
            </value>
            <value>
                <fullName>CANADIAN CLUB RTD MUSIC ATL RTD/ATL</fullName>
            </value>
            <value>
                <fullName>CANADIAN CLUB RTD NPD DEVELOPMENT ATL RTD/ATL</fullName>
            </value>
            <value>
                <fullName>CANADIAN CLUB RTD POS STORAGE &amp; DISTRIBUTION BTL RTD/BTL/OFF PREMISE</fullName>
            </value>
            <value>
                <fullName>CANADIAN CLUB RTD POS STORAGE &amp; DISTRIBUTION BTL TCC</fullName>
            </value>
            <value>
                <fullName>CANADIAN CLUB RTD RESEARCH ATL RESEARCH - SYND</fullName>
            </value>
            <value>
                <fullName>CANADIAN CLUB RTD RESEARCH ATL RTD/ATL</fullName>
            </value>
            <value>
                <fullName>CANADIAN CLUB RTD SPONSORSHIPS ATL RTD/ATL</fullName>
            </value>
            <value>
                <fullName>CANADIAN CLUB RTD VISIBILITY ATL RTD/ATL</fullName>
            </value>
            <value>
                <fullName>CANADIAN CLUB RTD VISIBILITY BTL RTD/BTL/OFF PREMISE</fullName>
            </value>
            <value>
                <fullName>HAKU FBS MEDIA ATL FBS/ATL</fullName>
            </value>
            <value>
                <fullName>HAKU FBS TRIAL BTL FBS/BTL/OFF PREMISE</fullName>
            </value>
            <value>
                <fullName>HAKU FBS TRIAL BTL ON PREMISE</fullName>
            </value>
            <value>
                <fullName>HAKU FBS VISIBILITY ATL FBS/ATL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>