unpackaged/main/default/objects/Campaign__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <description>per discussion with Mia, John, Jeff, Jody, Neil on 1/29 we are hiding this value for now.  We will re-visit the creation of a lookup or picklist for preferred vendors.</description>
    <label>Vendor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>