unpackaged/main/default/objects/Campaign__c/recordTypes/Initial_Campaign_Creation.recordType-meta.xml
<RecordType>
    <fullName>Initial_Campaign_Creation</fullName>
    <active>true</active>
    <description>Use this type for 2017 Campaigns</description>
    <label>Initial Campaign Creation</label>
</RecordType>