unpackaged/main/default/objects/Campaign__c/recordTypes/parent_campaign.recordType-meta.xml
<RecordType>
    <fullName>parent_campaign</fullName>
    <active>true</active>
    <description>Use this type for parent campaigns. This should be default record type for US BI Campaigns</description>
    <label>Parent Campaign</label>
</RecordType>