unpackaged/main/default/objects/Campaign__c/recordTypes/POS_Finance_Only.recordType-meta.xml
<RecordType>
    <fullName>POS_Finance_Only</fullName>
    <active>true</active>
    <label>POS Finance Only</label>
</RecordType>