unpackaged/main/default/objects/Campaign__c/validationRules/Campaign_Balance_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_Balance_Validation</fullName>
    <active>true</active>
    <description>Campaign balance can not be negative</description>
    <errorConditionFormula>AND(CampaignBalance__c &lt; 0,NOT($Profile.Name = 'System Administrator with Bulk Hard Delete'),
 Country__c &lt;&gt; 'AUS',
 NOT($Profile.Name ='Commercial Services Management'),
 Country__c &lt;&gt; 'US',
 Country__c &lt;&gt; 'Global Marketing'
 
)</errorConditionFormula>
    <errorMessage>Insufficient Campaign balance</errorMessage>
</ValidationRule>