unpackaged/main/default/objects/Campaign__c/validationRules/Campaign_BQ_match_MP_B.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_BQ_match_MP_B</fullName>
    <active>true</active>
    <description>Campaign Brand Quality must be consistent with the Brand associated with the Parent Marketing Plan.</description>
    <errorConditionFormula>Brand_Quality__r.Brand__c &lt;&gt;  ParentMarketingPlan__r.Brand__c</errorConditionFormula>
    <errorDisplayField>Brand_Quality__c</errorDisplayField>
    <errorMessage>Brand Quality is not consistent with the Brand associated with this Marketing Plan. Please enter an appropriate Brand Quality value.</errorMessage>
</ValidationRule>