unpackaged/main/default/objects/Campaign__c/validationRules/Campaign_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_Date_Validation</fullName>
    <active>true</active>
    <description>Campaign Start Date must be less than End Date.</description>
    <errorConditionFormula>InitialStartDate__c   &gt;   InitialEndDate__c</errorConditionFormula>
    <errorDisplayField>InitialStartDate__c</errorDisplayField>
    <errorMessage>Start Date must be prior or equal to End Date.</errorMessage>
</ValidationRule>