unpackaged/main/default/objects/Campaign__c/validationRules/CampaignAttributesRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CampaignAttributesRequired</fullName>
    <active>true</active>
    <description>This validation rule is required to enforce the picklist field requiredness on the custom VF page(grid).</description>
    <errorConditionFormula>ISBLANK(Name) ||
ISBLANK(TEXT(CampaignType__c)) || 
ISBLANK(TEXT(GLAccountType__c)) || 
ISBLANK(TEXT(GLDescription__c)) || 
ISBLANK(TEXT(GLCode__c))</errorConditionFormula>
    <errorMessage>Campaign Name. Campaign Type. GL Account Type. GL Description. GL Code must be populated.</errorMessage>
</ValidationRule>