unpackaged/main/default/objects/Campaign__c/validationRules/CampaignBudgetCannotbeLessThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>CampaignBudgetCannotbeLessThanZero</fullName>
    <active>true</active>
    <description>Campaign Budget cannot be less than zero dollars.</description>
    <errorConditionFormula>PlannedCampaignSpend__c &lt; 0  &amp;&amp;  Brand__c  &lt;&gt; 'Multibrand'</errorConditionFormula>
    <errorDisplayField>PlannedCampaignSpend__c</errorDisplayField>
    <errorMessage>Campaign Budget cannot be less than zero dollars for this Brand. Please update the Campaign Budget field.</errorMessage>
</ValidationRule>