unpackaged/main/default/objects/Campaign__c/validationRules/CampaignCreatedInPriorYear.validationRule-meta.xml
<ValidationRule>
    <fullName>CampaignCreatedInPriorYear</fullName>
    <active>true</active>
    <description>Campaigns cannot be created if the Master Marketing Plan is associated with a previous Year</description>
    <errorConditionFormula>AND( 
$Profile.Name &lt;&gt; "System Administrator", 
$Profile.Name &lt;&gt; "Commercial Services Management", 
$Profile.Name &lt;&gt; "System Administrator with Bulk Hard Delete",
$Profile.Name &lt;&gt; "AUS Application Admin - Platform",
$Profile.Name &lt;&gt; "AUS Commercial Services Management",
$Profile.Name &lt;&gt; "AUS Finance - Platform",
$Profile.Name &lt;&gt; "AUS Marketing - Platform", 
VALUE(( Year__c )) &lt; YEAR( TODAY() ))</errorConditionFormula>
    <errorMessage>Campaigns cannot be created if the Master Marketing Plan is associated with a previous Year</errorMessage>
</ValidationRule>