unpackaged/main/default/objects/Campaign__c/validationRules/CampaignCurrencyMustEqualMP.validationRule-meta.xml
<ValidationRule>
    <fullName>CampaignCurrencyMustEqualMP</fullName>
    <active>false</active>
    <description>Campaign Currency must equal Marketing Plan Currency.</description>
    <errorConditionFormula>text(CurrencyIsoCode)  &lt;&gt;  text(ParentMarketingPlan__r.CurrencyIsoCode)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Campaign Currency does not equal Marketing Plan Currency.</errorMessage>
</ValidationRule>