unpackaged/main/default/objects/Campaign__c/validationRules/CampaignsOnlyCreatedwithMPCampaignRT.validationRule-meta.xml
<ValidationRule>
    <fullName>CampaignsOnlyCreatedwithMPCampaignRT</fullName>
    <active>true</active>
    <description>Campaigns can only be created if the Master Marketing Plan has a record type containing 'Campaigns Allowed'.</description>
    <errorConditionFormula>NOT(CONTAINS(ParentMarketingPlan__r.RecordType.Name, 'Campaigns Allowed'))</errorConditionFormula>
    <errorMessage>Campaigns can only be created if the Master Marketing Plan record type allows for Campaigns. Please select another Marketing Plan.</errorMessage>
</ValidationRule>