unpackaged/main/default/objects/Campaign__c/validationRules/Comments_Required_for_Budget_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Comments_Required_for_Budget_Update</fullName>
    <active>true</active>
    <description>If the Campaign Budget is changed, the user must enter a comment as to why.</description>
    <errorConditionFormula>and(ischanged( PlannedCampaignSpend__c ),isblank( Comments__c ))</errorConditionFormula>
    <errorMessage>A Comment is required when changing a Campaign Budget value.</errorMessage>
</ValidationRule>