unpackaged/main/default/objects/Campaign__c/validationRules/End_Date_Year_Match_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Year_Match_Parent</fullName>
    <active>true</active>
    <description>End Date Year must match the Parent Marketing Plan.</description>
    <errorConditionFormula>text(ParentMarketingPlan__r.Year__c )  &lt;&gt;  text(YEAR( InitialEndDate__c ))</errorConditionFormula>
    <errorDisplayField>InitialEndDate__c</errorDisplayField>
    <errorMessage>End Date Year must match the Parent Marketing Plan.</errorMessage>
</ValidationRule>