unpackaged/main/default/objects/Campaign__c/validationRules/Forecasted_Amount_must_be_LE_Budget.validationRule-meta.xml
<ValidationRule>
    <fullName>Forecasted_Amount_must_be_LE_Budget</fullName>
    <active>false</active>
    <errorConditionFormula>ForecastedCampaignSpend__c &gt;  PlannedCampaignSpend__c</errorConditionFormula>
    <errorMessage>You cannot Forecast more than the Campaign Budget.</errorMessage>
</ValidationRule>