unpackaged/main/default/objects/Campaign__c/validationRules/IOCodeCannotBeCreatedinPriorYearPlan.validationRule-meta.xml
<ValidationRule>
    <fullName>IOCodeCannotBeCreatedinPriorYearPlan</fullName>
    <active>true</active>
    <description>IO Codes cannot be created for a Campaigns if the Master Marketing Plan is associated with a previous Year</description>
    <errorConditionFormula>AND( 
ISCHANGED( IOCode__c),
NOT(CONTAINS($Profile.Name, "System Administrator")), 
VALUE(( Year__c )) &lt; YEAR( TODAY() ))</errorConditionFormula>
    <errorMessage>IO Codes cannot be created for a Campaigns if the Master Marketing Plan is associated with a previous Year</errorMessage>
</ValidationRule>