unpackaged/main/default/objects/Campaign__c/validationRules/Program_Required_For_US.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Required_For_US</fullName>
    <active>false</active>
    <description>Programs requires for US Campaigns</description>
    <errorConditionFormula>AND
(
 RecordType.DeveloperName = 'Campaign_2018',
  ISBLANK(Related_Priority__c) 
)</errorConditionFormula>
    <errorMessage>Program is required.</errorMessage>
</ValidationRule>