unpackaged/main/default/objects/Campaign__c/validationRules/Restrict_Programs_by_Country.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Programs_by_Country</fullName>
    <active>true</active>
    <description>Don't allow programs outside the country</description>
    <errorConditionFormula>AND
(
    NOT(ISPICKVAL(Related_Priority__r.Country__c, "Both")),
    OR
    (
       AND
       (ISPICKVAL(Related_Priority__r.Country__c, "USA"),
        ISPICKVAL(CurrencyIsoCode, "AUD")
       ),
       AND
       (ISPICKVAL(Related_Priority__r.Country__c, "AUS"),
        ISPICKVAL(CurrencyIsoCode, "USD")
       )
    )
)</errorConditionFormula>
    <errorMessage>This program is not allowed in this country, please select another option</errorMessage>
</ValidationRule>