unpackaged/main/default/objects/Campaign__c/validationRules/Start_Date_Year_Match_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Year_Match_Parent</fullName>
    <active>true</active>
    <description>Start Date Year must match the Parent Marketing Plan.</description>
    <errorConditionFormula>text(ParentMarketingPlan__r.Year__c )  &lt;&gt;  text(YEAR( InitialStartDate__c ))</errorConditionFormula>
    <errorDisplayField>InitialStartDate__c</errorDisplayField>
    <errorMessage>Start Date Year must match the Parent Marketing Plan.</errorMessage>
</ValidationRule>