unpackaged/main/default/objects/Campaign__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ParentMarketingPlan__c</columns>
    <columns>Brand_Quality__c</columns>
    <columns>PlannedCampaignSpend__c</columns>
    <columns>CampaignBalance__c</columns>
    <columns>CommittedCampaignSpend__c</columns>
    <columns>ActualCampaignSpend__c</columns>
    <columns>IOCode__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>